Attempting to fix resume display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,12 @@ header{
   text-align: justify;
 }
 
+@media (max-width: 599px){
+  #resume-window{
+    width: 400px;
+  }
+}
+
 #resume-window{
   padding-top: 35px;
 }
